# CatCode.Testing.ResourceGenerator

./: .dockerignore  .gitignore  Dockerfile  README.md  appconfig.yaml  docker-compose.yaml  main.py  pyproject.toml  settings.py
generator/: mocker.py
