[tool.poetry]
name = "catcode-testing-resourcegenerator"
version = "0.1.0"
description = ""
authors = ["Matias Wallenius <MatiWall@live.dk>"]
readme = "README.md"
packages = [{include = "catcode"}]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0.2"
git-python = "^1.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
